Add 3D Touch quick action
Action: Start Game

--- a/Maze/Info.plist
+++ b/Maze/Info.plist
@@ -7,10 +7,12 @@
 		<dict>
 			<key>UIApplicationShortcutItemType</key>
 			<string>kryg.maze.game-board</string>
-			<key>UIApplicationShortcutItemTitle</key>
-			<string>Start game</string>
 			<key>UIApplicationShortcutItemIconType</key>
 			<string>UIApplicationShortcutIconTypePlay</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Start game</string>
+			<key>UIApplicationShortcutItemSubtitle</key>
+			<string>Quick start</string>
 		</dict>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
